--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,10 @@ DocProject/Help/*.HxC
 # User-specific files
 *.scc
 *.suo
+*.sln
+*.sublime-project
+*.pyproj
+*.pyproj.user
 csx
 .DS_Store
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
