Final cleanup push

--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ DocProject/Help/*.HxC
 *.sublime-project
 *.pyproj
 *.pyproj.user
+*.sublime-workspace
 csx
 .DS_Store
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
